--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,7 @@
+@import url("assets/css/index.css");
+
 /* Fonts Importadas */
+
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap");
 
@@ -129,7 +132,6 @@ div {
   animation: gradient 10s ease infinite alternate;
 }
 
-
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -178,17 +180,18 @@ div {
 
 .divider {
   width: 70%;
-  max-width: 700%;
+  max-width: 700px;
   height: 5px;
   background: var(--divider-bg-color);
 }
 
 .offer {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .offer__price {
+  font-family: "Raleway", sans-serif;
   font-weight: bold;
   font-size: 2.5rem;
 }
@@ -215,7 +218,7 @@ div {
 .header::after {
   content: "";
   width: 100%;
-  height: 250px;
+  height: 200px;
   position: absolute;
   bottom: 0;
   background: linear-gradient(0deg, var(--primary-color), transparent);
@@ -309,10 +312,9 @@ section {
   transform: rotateY(45deg);
 }
 
-
 /* Conteudo Cards*/
 .contents {
-  margin: 100px auto;
+  margin: 50px auto;
 }
 
 .contents__container {
