--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,7 +26,7 @@
   
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 
   .contents__container {
     grid-template-columns: repeat(2, 1fr) !important;
@@ -70,6 +70,10 @@
     margin: 0 auto;
   }
 
+  .contents__card:hover {
+    transform: scale(1.0) !important;
+  }
+
   section {
     scroll-margin-top: 40px;
   }
@@ -92,7 +96,5 @@
     grid-auto-flow: column;
     overflow: auto hidden;
   }
- 
+
 }
-
-
